インフラと統合するために設定を変更

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,8 +6,8 @@ services:
     container_name: db-authentication
     restart: always
     environment:
-      MONGO_INITDB_ROOT_USERNAME: ryutaro_akiya
-      MONGO_INITDB_ROOT_PASSWORD: Haba#Nero_1219
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: abcde
       MONGO_INITDB_DATABASE: habanero
     ports:
       - 27017:27017
