--- a/resources/application.dev.conf
+++ b/resources/application.dev.conf
@@ -10,8 +10,8 @@ ktor {
 }
 
 fqdn {
-  own = "localhost:80"
-  ui = "localhost:8080"
+  own = "auth.localhost"
+  ui = "www.localhost"
 }
 
 database {
