--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# IntelliJ idea & gradle関係
 /.gradle
 /.idea
 /out
@@ -5,3 +6,8 @@
 *.iml
 *.ipr
 *.iws
+
+# tmpディレクトリ内のファイル
+tmp/*
+!tmp
+!tmp/README.md
