--- a/resources/application.conf
+++ b/resources/application.conf
@@ -16,11 +16,12 @@ fqdn {
 }
 
 database {
+  // TODO 本番環境用パスワードが決まり次第
   host = "db-authentication"
   port = "27017"
   db_name = "habanero"
   user_name = "api"
-  password = "abc"
+  password = ${?DB_PASSWORD}
 }
 
 // アクセストークン
